traefik/06-middlewares.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: auth-headers
spec:
    headers:
        stsSeconds: 315360000
        browserXssFilter: true
        contentTypeNosniff: true
        forceSTSHeader: true
        stsIncludeSubdomains: true
        stsPreload: true
        frameDeny: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: oauth-auth-redirect
spec:
    forwardAuth:
        address: https://nginx.lancastrian.dev/oauth2/auth
        trustForwardHeader: true
        authResponseHeaders:
        - X-Auth-Request-Access-Token
        - Authorization
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-errors
spec:
  errors:
    status:
      - "401-403"
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/sign_in
